2008-04-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.csproj
	* Mono.Cecil.dll.sources:
		Add Mono.Cecil.Cil/OpCodeNames.cs to the build.

	* Mono.Cecil.Cil/OpCodeNames.cs
	* Mono.Cecil.Cil/OpCode.cs
	* Mono.Cecil.Cil/OpCodes.cs:
		Reduce the OpCode struct size to 8 bytes (instead of 36).
		Based on the SRE.OpCode code found in corlib.

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/AssemblyDefinition.cs:
		Short circut loop when module is found.

2008-04-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/SecurityDeclarationReader.cs:
		Implement resolving of SecurityDeclarations.

2008-03-31  Jb Evain  <jbevain@novell.com>

	Integrate patches from Dzintars Avots <davots@coverity.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/DefaultImporter.cs
	  Mono.Cecil/MethodDefinition.cs:
		Fix generic parameter cloning to avoid issues when
		the constraint reference the parameter itself.

	* Mono.Cecil/MethodBody.cs (Clone): deals with switches.

	* Mono.Cecil/MethodBody.cs (Clone): clone the name of
	the local variables.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/ReflectionReader.cs:
		Avoid creating a BinaryReader+MemoryStream on LE archs for
		GetConstant. Saves about 400KB for Gendarme.
		Avoid a BinaryReader creation in GetConstant which saves
		about 50KB for Gendarme.
	* Mono.Cecil.Metadata/GuidHeap.cs:
		Compute ideal capacity for Hashtable. Avoid memory allocation
		if a single GUID is present (which is the case for all of
		Mono 2.0 assemblies). Saves a whole 2KB for Gendarme ;-)
	* Mono.Cecil.Binary/Image.cs:
		Add internal GetSectionAtVirtualAddress to avoid creating
		BinaryReader in some cases.
	* Mono.Cecil.Binary/ResourceReader.cs:
		Avoid a BinaryReader creation in SetInitialValue which saves
		about 3000KB for Gendarme.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/CopyImageVisitor.cs: